# HomeServer

./: CMakeLists.txt  postgresql.txt
src/Header/: client_socket.hpp  file_response.hpp  file_to_string.hpp  handle_client.hpp  logger.hpp  parser_body_relay.hpp  parser_uno.hpp  request.hpp  request_from_server.hpp  response.hpp  server_socket.hpp  smart_home.hpp  socket.hpp  template_relay.hpp  text_response.hpp  text_to_string.hpp  uart_uno.hpp  uno.hpp
src/Source/: client_socket.cpp  file_response.cpp  file_to_string.cpp  handle_client.cpp  logger.cpp  main.cpp  parser_body_relay.cpp  parser_uno.cpp  request.cpp  request_from_server.cpp  response.cpp  server_socket.cpp  smart_home.cpp  socket.cpp  template_relay.cpp  text_response.cpp  text_to_string.cpp  uart_uno.cpp  uno.cpp
src/html/: relay.html
